Moved async runner to virtual thread